fix alignment of products

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
   font-family: 'DM Serif Display', 'Times New Roman';
-  font-size: 5em;
+  font-size: 4em;
   color: whitesmoke;
   letter-spacing: 2px;
 }
@@ -41,7 +41,7 @@ li {
 }
 
 .cover {
-  height: 60vh;
+  height: 70vh;
   margin: auto;
   background-image: url("../img/food-bg.jpg");
   background-size: cover;
@@ -56,5 +56,54 @@ li {
   text-align: center;
   background: rgba( 14, 13, 13, 0.2 );
   backdrop-filter: blur( 2px );
+}
 
+.products, .checkout {
+  margin: auto;
+  padding: 4em;
+
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.drink, .food {
+  padding: 1em;
+  display: inline-grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 50px;
+
+}
+.card {
+  padding: 2em;
+  border: solid 3px gray;
+  
+}
+.product-box {
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+
+}
+h4, h5 {
+  margin: auto;
+  font-size: 15px;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+button {
+  background-color: #df4323;
+  border: none;
+  color: whitesmoke;
+  padding: .5em;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
